<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Media</string>

    <string name="play_button_text">Play</string>
    <string name="stop_button_text">Stop</string>
    <string name="play_at_60fps">Play at 60fps</string>
    <string name="loop_play">循环播放</string>
    <string name="movie_player">movie player(MediaCodec and MediaExtractor)</string>

    <string name="tfcCameraParams">Camera params: %1$dx%2$d @%s fps</string>
    <string name="tfcRectSize">Rect size (pixels): %1$dx%2$d</string>
    <string name="tfcZoomArea">Zoom area (pixels): %1$dx%2$d</string>




    <string name="track_selection_title">选择轨道(Select tracks)</string>

    <string name="unexpected_intent_action">不被期待的Action(Unexpected intent action:) <xliff:g id="action">%1$s</xliff:g></string>

    <string name="error_cleartext_not_permitted">不允许使用明文通信</string>

    <string name="error_generic">播放失败</string>

    <string name="error_unrecognized_abr_algorithm">无法识别的ABR算法</string>

    <string name="error_unrecognized_stereo_mode">无法识别的立体声模式(stereo mode)</string>

    <string name="error_drm_not_supported">API级别低于18的受支持的受保护内容</string>

    <string name="error_drm_unsupported_scheme">该设备不支持所需的DRM方案</string>

    <string name="error_drm_unknown">发生了未知的DRM错误</string>

    <string name="error_no_decoder">该设备不提供解码器for: <xliff:g id="mime_type">%1$s</xliff:g></string>

    <string name="error_no_secure_decoder">该设备不提供安全的解码器for: <xliff:g id="mime_type">%1$s</xliff:g></string>

    <string name="error_querying_decoders">无法查询设备解码器</string>

    <string name="error_instantiating_decoder">无法实例化解码器 <xliff:g id="decoder_name">%1$s</xliff:g></string>

    <string name="error_unsupported_video">媒体包括视频轨道，但此设备无法播放</string>

    <string name="error_unsupported_audio">媒体包括音频轨道，但此设备无法播放</string>

    <string name="storage_permission_denied">访问存储的权限被拒绝</string>

    <string name="sample_list_load_error">无法加载一个或多个样本列表</string>

    <string name="ima_not_loaded">播放没有广告的示例，因为未加载IMA扩展名</string>

    <string name="download_start_error">无法开始下载</string>

    <string name="download_playlist_unsupported">此演示应用程序不支持下载播放列表</string>

    <string name="download_drm_unsupported">此演示应用程序不支持下载受保护的内容</string>

    <string name="download_scheme_unsupported">此演示应用程序仅支持下载http流</string>

    <string name="download_ads_unsupported">IMA不支持离线广告</string>

    <string name="prefer_extension_decoders">首选扩展解码器</string>

    <string name="random_abr">启用随机ABR</string>

    <string name="media_route_menu_title">Cast</string>

    <string name="add_samples">添加视频</string>

    <string name="cast_context_error">获取Cast的context失败, 请尝试更新google服务, 并重新启动app</string>

    <string name="player_error_msg">播放器发生错误, 重新选择播放队列, 可以通过log来查看具体的错误信息</string>


    <string name="float_window_warning">当前无权限使用悬浮窗，请授权！</string>
    <string name="error_message">出了点小问题，稍后重试</string>
    <string name="retry">重    试</string>
    <string name="continue_play">继续播放</string>
    <string name="wifi_tip">您正在使用移动网络，继续播放将消耗流量</string>
    <string name="lock_tip">请先解锁屏幕！</string>
    <string name="unlocked">已解锁</string>
    <string name="locked">已锁定</string>
    <string name="replay">重新播放</string>
    <string name="str_api">API演示</string>
    <string name="str_list">列表播放</string>
    <string name="str_extend">扩展功能</string>
    <string name="str_pip">画中画</string>
    <string name="str_other">其他:</string>
    <string name="str_play">播放</string>
    <string name="str_video_type">视频类型:</string>
    <string name="str_vod">点播</string>
    <string name="str_live">直播</string>
    <string name="str_api_vod">点播</string>
    <string name="str_api_live">直播</string>
    <string name="str_rtsp_concat">rtsp和concat分段视频演示</string>
    <string name="str_definition">清晰度切换</string>
    <string name="str_screen_shot">截图</string>
    <string name="str_raw_or_assets">播放Raw或Assets</string>
    <string name="str_multi_player">多播放器同时播放</string>
    <string name="str_list_view">ListView</string>
    <string name="str_recycler_view">RecyclerView</string>
    <string name="str_auto_play_recycler_view">自动播放的RecyclerView</string>
    <string name="str_list_fragment_viewpager">列表、Fragment和ViewPager组合demo</string>
    <string name="str_rotate_in_fullscreen">全屏手动旋转demo</string>
    <string name="str_tiktok">抖音</string>
    <string name="str_fullscreen_directly">直接进入全屏播放</string>
    <string name="str_danmu">弹幕</string>
    <string name="str_ad">广告</string>
    <string name="str_extend_rotate_in_fullscreen">全屏手动旋转demo</string>
    <string name="str_pip_demo">画中画</string>
    <string name="str_pip_in_list">列表滑动进入画中画</string>
    <string name="str_pip_android_o">Android 8.0 画中画demo</string>
    <string name="str_switch_player">多播放器切换</string>
    <string name="str_start_pip">悬浮窗</string>
    <string name="str_cache">缓存</string>
    <string name="str_play_list">连续播放一个列表</string>
    <string name="str_switch_player_btn">切换播放核心</string>
    <string name="str_current_player">当前播放核心是：</string>
    <string name="dkplayer_replay">重新播放</string>
    <string name="dkplayer_lock_tip">请先解锁屏幕！</string>
    <string name="dkplayer_unlocked">已解锁</string>
    <string name="dkplayer_locked">已锁定</string>
    <string name="dkplayer_error_message">出了点小问题，请稍后重试</string>
    <string name="dkplayer_retry"> 重    试 </string>
    <string name="dkplayer_continue_play">继续播放</string>
    <string name="dkplayer_wifi_tip">您正在使用移动网络，继续播放将消耗流量</string>
    <string name="clear_cache">清除缓存</string>
    <string name="close_float_window">关闭悬浮窗</string>
    <string name="ijkplayer_name">IjkPlayer</string>
    <string name="exoplayer_name">ExoPlayer</string>
    <string name="mediaplayer_name">MediaPlayer</string>


    <string name="tips_not_wifi">您当前正在使用移动网络，继续播放将消耗流量</string>
    <string name="tips_not_wifi_confirm">继续播放</string>
    <string name="no_net">当前找不到网络</string>
    <string name="tips_not_wifi_cancel">停止播放</string>
    <string name="no_url">播放地址无效</string>
    <string name="jump_ad">跳过</string>
</resources>
