<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <Button
        android:id="@+id/play_stop_button"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/play_button_text" />

    <Spinner
        android:id="@+id/playMovieFile_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/play_stop_button"
        android:layout_toEndOf="@+id/play_stop_button" />


    <CheckBox
        android:id="@+id/locked60fps_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/movie_texture_view"
        android:layout_below="@+id/play_stop_button"
        android:text="@string/play_at_60fps" />

    <CheckBox
        android:id="@+id/loopPlayback_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/locked60fps_checkbox"
        android:layout_alignBottom="@+id/locked60fps_checkbox"
        android:layout_toEndOf="@+id/locked60fps_checkbox"
        android:text="@string/loop_play" />


    <TextureView
        android:id="@+id/movie_texture_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/play_stop_button"
        android:layout_below="@+id/locked60fps_checkbox" />
</RelativeLayout>